--- a/degreez/macos/Runner/Configs/AppInfo.xcconfig
+++ b/degreez/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = degreez
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.technion.android.degreez
+PRODUCT_BUNDLE_IDENTIFIER = com.technion.android.degreEZ
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.technion.android. All rights reserved.
