--- a/degreez/pubspec.yaml
+++ b/degreez/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   cloud_firestore: ^4.17.5
   http: ^1.1.0
   shared_preferences: ^2.1.0
+  calendar_view: ^1.4.0
+  flutter_week_view: ^1.4.3
+  intl: ^0.18.0
+  url_launcher: ^6.1.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
