--- a/degreez/pubspec.yaml
+++ b/degreez/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   intl: ^0.18.0
   url_launcher: ^6.1.10
   auto_size_text: ^3.0.0
+  flutter_launcher_icons: ^0.14.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
