fixed color in GPA / current semester set to Spring 2025

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /degreez/Release_Key
 degreez/.env
 /.vscode
+degreez/android/Release_Key/encryption_public_key.pem
+degreez/android/Release_Key/upload_certificate.pem
+degreez/android/Release_Key/pepk.jar
