--- a/degreez/pubspec.yaml
+++ b/degreez/pubspec.yaml
@@ -9,12 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^4.17.4
-  firebase_core: ^2.1.1
+  firebase_auth: ^5.6.0 # Updated to latest version cuz of ai
+  firebase_core: ^3.14.0 # Updated to latest version cuz of ai
+  cloud_firestore: ^5.6.9 # Updated to latest version cuz of ai
   google_sign_in: ^6.3.0
   provider: ^6.1.1
   flutter_dotenv: ^5.2.1
-  cloud_firestore: ^4.17.5
   http: ^1.1.0
   shared_preferences: ^2.1.0
   calendar_view: ^1.4.0
@@ -23,6 +23,10 @@ dependencies:
   url_launcher: ^6.1.10
   auto_size_text: ^3.0.0
   flutter_launcher_icons: ^0.14.3
+
+  firebase_ai: ^2.1.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
