--- a/degreez/pubspec.yaml
+++ b/degreez/pubspec.yaml
@@ -19,10 +19,11 @@ dependencies:
   shared_preferences: ^2.1.0
   calendar_view: ^1.4.0
   flutter_week_view: ^1.4.3
-  intl: ^0.18.0
+  intl: ^0.18.0    
   url_launcher: ^6.1.10
   auto_size_text: ^3.0.0
   flutter_launcher_icons: ^0.14.3
+  file_picker: ^8.0.0+1
 
   firebase_ai: ^2.1.0
 
