--- a/degreez/android/app/src/main/AndroidManifest.xml
+++ b/degreez/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-feature android:name="android.hardware.location.gps"
+                  android:required="false"/>
     <application
         android:label="degreEZ"
         android:name="${applicationName}"
@@ -45,6 +49,8 @@
             <action android:name="android.intent.action.VIEW" />
             <data android:scheme="https" />
         </intent>
+        <package android:name="com.google.android.apps.maps"/>
+        <package android:name="com.waze"/>
     </queries>
 
 </manifest>
