--- a/degreez/pubspec.yaml
+++ b/degreez/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   auto_size_text: ^3.0.0
   flutter_launcher_icons: ^0.14.3
   file_picker: ^8.0.0+1
-
+  string_similarity: ^2.1.1
   firebase_ai: ^2.1.0
   flutter_map: ^8.1.1
   location: ^8.0.1
